# ai-video-composite

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  scene_config_schema.json
ai_video_composite/: __init__.py  __main__.py  compositing.py  removal.py  video.py
examples/: example_compose.py  example_multilayer.py  example_video.py  scene_config.json
tests/: test_compositing.py  test_removal.py  test_video.py
